--- a/package.json
+++ b/package.json
@@ -35,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "bootstrap": "^5.3.3",
+    "react-bootstrap": "^2.10.9",
+    "sass": "^1.85.0"
   }
 }
