--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# images
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.svg
+*.ico
+
 # dependencies
 /node_modules
 /.pnp
